--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "prebuild": "node_modules/.bin/rimraf dist",
     "prepublish": "npm run build"
   },
-  "dependencies": {},
+  "dependencies": {
+    "@mohayonao/wave-tables": "0.2.0"
+  },
   "devDependencies": {
     "babel-cli": "6.26.0",
     "babel-preset-es2015": "6.24.1",
