--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "web-audio-oscillators",
   "version": "0.0.0",
-  "description": "A collection of custom oscillators for use with the Web Audio API.",
+  "description": "A collection of Web Audio API custom oscillators.",
   "author": "Luke Horvat",
   "license": "MIT",
   "repository": "lukehorvat/web-audio-oscillators",
