--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
   "scripts": {
     "build": "node_modules/.bin/babel lib -d dist -q",
     "prebuild": "node_modules/.bin/rimraf dist",
-    "prepublish": "npm run build"
+    "prepublish": "npm run build",
+    "pretest": "npm run build",
+    "test": "node_modules/.bin/electron test/index.html"
   },
   "dependencies": {
     "@mohayonao/wave-tables": "0.2.0"
@@ -18,7 +20,10 @@
     "babel-cli": "6.26.0",
     "babel-preset-es2015": "6.24.1",
     "babel-preset-stage-0": "6.24.1",
-    "rimraf": "2.5.4"
+    "electron": "1.7.6",
+    "qwerty-hancock": "0.5.1",
+    "rimraf": "2.5.4",
+    "soundbank-reverb": "1.1.2"
   },
   "keywords": [
     "web",
