--- a/package.json
+++ b/package.json
@@ -5,25 +5,26 @@
   "author": "Luke Horvat",
   "license": "MIT",
   "repository": "lukehorvat/web-audio-oscillators",
-  "main": "dist",
+  "main": "dist/index.js",
+  "types": "dist/index.d.ts",
+  "files": [
+    "dist"
+  ],
   "scripts": {
-    "build": "node_modules/.bin/babel lib -d dist -q",
-    "prebuild": "node_modules/.bin/rimraf dist",
-    "prepublish": "npm run build",
-    "pretest": "npm run build",
-    "test": "node_modules/.bin/electron test/index.html"
+    "build": "tsc",
+    "prebuild": "rimraf dist",
+    "test": "electron test/main.js",
+    "pretest": "npm run build"
   },
   "dependencies": {
-    "@mohayonao/wave-tables": "0.2.0"
+    "@mohayonao/wave-tables": "^0.2.0"
   },
   "devDependencies": {
-    "babel-cli": "6.26.0",
-    "babel-preset-es2015": "6.24.1",
-    "babel-preset-stage-0": "6.24.1",
-    "electron": "1.7.6",
-    "qwerty-hancock": "0.5.1",
-    "rimraf": "2.5.4",
-    "soundbank-reverb": "1.1.2"
+    "electron": "^26.1.0",
+    "qwerty-hancock": "^0.10.0",
+    "rimraf": "^4.1.2",
+    "soundbank-reverb": "^1.1.2",
+    "typescript": "^5.1.6"
   },
   "keywords": [
     "web",
@@ -36,11 +37,5 @@
     "wavetable",
     "fourier",
     "music"
-  ],
-  "babel": {
-    "presets": [
-      "es2015",
-      "stage-0"
-    ]
-  }
+  ]
 }
