--- a/package.json
+++ b/package.json
@@ -13,18 +13,21 @@
   "scripts": {
     "build": "tsc",
     "prebuild": "rimraf dist",
-    "test": "electron test/main.js",
+    "test": "webpack serve --mode development --config ./test/webpack.config.js",
     "pretest": "npm run build"
   },
   "dependencies": {
     "@mohayonao/wave-tables": "^0.2.0"
   },
   "devDependencies": {
-    "electron": "^26.1.0",
+    "html-webpack-plugin": "^5.5.0",
     "qwerty-hancock": "^0.10.0",
     "rimraf": "^4.1.2",
     "soundbank-reverb": "^1.1.2",
-    "typescript": "^5.1.6"
+    "typescript": "^5.1.6",
+    "webpack": "^5.75.0",
+    "webpack-cli": "^4.10.0",
+    "webpack-dev-server": "^4.11.1"
   },
   "keywords": [
     "web",
