--- a/package.json
+++ b/package.json
@@ -13,8 +13,7 @@
   "scripts": {
     "build": "tsc",
     "prebuild": "rimraf dist",
-    "test": "webpack serve --mode development --config ./test/webpack.config.js",
-    "pretest": "npm run build"
+    "test": "webpack serve --mode development --config ./test/webpack.config.js"
   },
   "dependencies": {
     "@mohayonao/wave-tables": "^0.2.0"
@@ -24,6 +23,7 @@
     "qwerty-hancock": "^0.10.0",
     "rimraf": "^4.1.2",
     "soundbank-reverb": "^1.1.2",
+    "ts-loader": "^9.4.1",
     "typescript": "^5.1.6",
     "webpack": "^5.75.0",
     "webpack-cli": "^4.10.0",
